manifests/hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizontal
spec:
  selector:
    matchLabels:
      run: horizontal
  replicas: 1
  template:
    metadata:
      labels:
        run: horizontal
    spec:
      containers:
      - name: horizontal
        image: registry.k8s.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 16Mi
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: horizontal
  labels:
    run: horizontal
spec:
  ports:
  - port: 80
  selector:
    run: horizontal
